# tps65987_update_over_i2c

./: README.md
code/: CMakeLists.txt  build.sh  hostIF82.h  i2c_cmd.c  i2c_cmd.h  main.c  run.sh  tps65987d_flash.c
